--- a/keycloak/themes/composum/login/resources/css/login.css
+++ b/keycloak/themes/composum/login/resources/css/login.css
@@ -1,3 +1,7 @@
+/**
+ * #CUSTOM# general settings
+ */
+
 * {
     font-family: 'robotolight', "Open Sans", Helvetica, Arial, sans-serif;
     font-size: 14px;
@@ -24,83 +28,9 @@ h4 {
     font-size: 16px;
 }
 
-.login-pf body {
-    margin: 0;
-    width: 100%;
-    height: 100%;
-    padding: 0;
-    background: #f9fff6;
-}
-
-.login-wrapper-top, .login-wrapper-bottom {
-    color: #666;
-    opacity: 0.8;
-}
-
-.login-wrapper-top {
-    display: inline-block;
-    margin-bottom: -10px;
-}
-
-.login-wrapper-pf-page {
-    max-width: 900px;
-    height: 100%;
-    margin: 0 auto;
-    background: transparent url(../img/bg-ist-w-rg.png) 75% 0 no-repeat;
-    background-size: auto;
-}
-
-.alert-error {
-    background-color: #ffffff;
-    border-color: #cc0000;
-    color: #333333;
-    opacity: 0.9;
-}
-
-.login-pf-page .form-control {
-    font-size: 14px;
-    opacity: 0.9;
-}
-
-.login-pf-page .form-control:focus {
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(120, 180, 100, .6);
-    border-color: #70b564;
-}
-
-.login-pf-page #kc-form-buttons {
-    width: 100%;
-    text-align: right;
-    margin: 25px 1px 5px;
-}
-
-.login-pf-page #kc-form-buttons .btn {
-    display: inline-block;
-    width: auto;
-    min-width: 150px;
-    box-shadow: inset 0 1px 0 rgba(120, 180, 100, .15), 0 1px 1px rgba(0, 0, 0, .075);
-    background-image: linear-gradient(to bottom, #88c979 0, #446a3a 100%);
-    border-color: #fff;
-    padding: 7px 25px;
-}
-
-.login-pf-page #kc-form-buttons .btn:focus,
-.login-pf-page #kc-form-buttons .btn:hover {
-    background-color: #446a3a;
-    outline-color: #fff;
-}
-
-.login-pf-page .card-pf {
-    max-width: 460px;
-    margin: 0 auto 30px;
-    padding: 0 20px 15px;
-    border: 1px solid transparent;
-    border-radius: 4px;
-    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
-    box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
-    background: rgba(120, 180, 100, .4);
-}
-
-/**/
+/**
+ * 'original'...
+ */
 
 #kc-locale ul {
     display: none;
@@ -472,29 +402,6 @@ a.zocial {
     width: 40%;
 }
 
-/*tablet*/
-@media (max-width: 840px) {
-    .login-pf-page .card-pf {
-        max-width: none;
-        margin-left: 20px;
-        margin-right: 20px;
-        padding: 20px 20px 30px 20px;
-    }
-}
-
-@media (max-width: 767px) {
-    .login-pf-page .card-pf {
-        max-width: none;
-        margin-left: 0;
-        margin-right: 0;
-        padding-top: 0;
-    }
-
-    .card-pf.login-pf-accounts {
-        max-width: none;
-    }
-}
-
 .login-pf-page .login-pf-signup {
     font-size: 15px;
     color: #72767b;
@@ -536,4 +443,120 @@ a.zocial {
 
 .login-pf-page .btn-primary {
     margin-top: 0;
+}
+
+/**
+ * #CUSTOM# redefinitions / extensions
+ */
+
+.login-pf body {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    background: #f9fff6;
+}
+
+.login-wrapper-top, .login-wrapper-bottom {
+    display: inline-block;
+    max-width: 75%;
+    color: #666;
+    opacity: 0.8;
+}
+
+@media (min-width: 768px) {
+    .login-wrapper-top, .login-wrapper-bottom {
+        max-width: 50%;
+    }
+}
+
+.login-wrapper-pf-page {
+    max-width: 900px;
+    height: 100%;
+    margin: 0 auto;
+    padding: 0 20px;
+    background: transparent url(../img/bg-ist-w-rg.png) 75% 0 no-repeat;
+    background-size: auto;
+}
+
+.alert-error {
+    background-color: #ffffff;
+    border-color: #cc0000;
+    color: #333333;
+    opacity: 0.9;
+}
+
+.login-pf-page .form-control {
+    font-size: 14px;
+    opacity: 0.9;
+}
+
+.login-pf-page .form-control:focus {
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(120, 180, 100, .6);
+    border-color: #70b564;
+}
+
+.login-pf-page #kc-form-buttons {
+    width: 100%;
+    text-align: right;
+    margin: 25px 1px 5px;
+}
+
+.login-pf-page #kc-form-buttons .btn {
+    display: inline-block;
+    width: auto;
+    min-width: 150px;
+    box-shadow: inset 0 1px 0 rgba(120, 180, 100, .15), 0 1px 1px rgba(0, 0, 0, .075);
+    background-image: linear-gradient(to bottom, #88c979 0, #446a3a 100%);
+    border-color: #fff;
+    padding: 7px 25px;
+}
+
+.login-pf-page #kc-form-buttons .btn:focus,
+.login-pf-page #kc-form-buttons .btn:hover {
+    background-color: #446a3a;
+    outline-color: #fff;
+}
+
+.login-pf-page .card-pf {
+    max-width: 600px;
+    margin: 20px auto 30px;
+    padding: 0 20px 15px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
+    box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
+    background: rgba(120, 180, 100, .4);
+}
+
+.login-pf-page .card-pf .login-pf-header {
+    position: relative;
+}
+
+#kc-locale-wrapper {
+    position: absolute;
+    right: 0;
+    top: 0;
+    background-color: rgba(190, 222, 180, 0.6);
+}
+
+@media (min-width: 768px) {
+    #kc-locale-wrapper {
+        top: 20px;
+    }
+}
+
+@media (min-width: 768px) {
+    .login-pf-page .login-pf-social-section:last-of-type {
+        border-left-color: #88c979;
+    }
+}
+
+.login-pf-page .login-pf-social-link {
+    margin-top: 20px;
+    margin-bottom: 0;
+}
+
+.login-pf-page .login-pf-social-link a {
+    background-color: rgba(255, 255, 220, 0.8);
 }
